Refactor: RegionCategoryResponse 응답 방법 변경